# nftopia

./: .gitignore  .npmrc  .pnpm-workspace.yaml  .pnpmfile.cjs  Dockerfile  README.md  copy_abis.sh  package-lock.json  package.json  pnpm-lock.yaml  testRedis.js  testRedis.ts  vercel.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml  deploy-staging.yml  docker-build.yml  main-ci.yml  nftopia-backend.yml  nftopia-frontend.yml  nftopia-stellar.yml  pr-checks.yml  release.yml
.turbo/daemon/: 964d605253d87a62-turbo.log.2026-01-29
apps/: globals.css
apps/backend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/cache/: redis_utils.py
apps/frontend/: README.md  jest.config.js  jest.setup.js  middleware.ts  next.config.js  (+6 more)
nftopia-backend/: package-lock.json  pnpm-lock.yaml
nftopia-frontend/: package-lock.json  pnpm-lock.yaml
nftopia-marketplace-service/: .phpunit.result.cache  README.md  nftopia_laravel
nftopia-notification-service/: .env.example  README.md  README_NOTIFICATION_SCHEMA.md  README_SMS.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
nftopia-payment-service/: README.md  WEBHOOK_README.md  build.gradle
nftopia-stellar/contracts/collection_factory_contract/: Cargo.toml
nftopia-stellar/contracts/collection_factory_contract/src/: collection.rs  errors.rs  events.rs  factory.rs  lib.rs  storage.rs  test.rs
nftopia_analytics/: .env.example  README.md  celery.py  docker-compose.monitoring.yml  docker-compose.yml  manage.py  requirements.txt
on-chain/: README.md  Scarb.toml
sms_notifications/: admin.py  models.py  services.py  tasks.py
(+665 files in other folders)
