[package]
name = "collection-factory"
version = "0.1.0"
description = "NFT Collection Factory for NFTopia on Stellar Soroban"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "24.1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
soroban-sdk = { version = "24.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"  # Optimize for size
overflow-checks = true
debug = false
strip = "symbols"
lto = true
codegen-units = 1