[package]
name = "collection-factory"
version = "0.1.0"
description = "NFT Collection Factory for NFTopia on Stellar Soroban"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
soroban-sdk = { version = "25.0.2", features = ["testutils"] }